@@ -5,8 +5,7 @@ import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.autoconfigure.OverrideAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.test.context.ActiveProfiles;
-import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
-import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
+import uk.gov.hmcts.reform.fpl.enums.HearingOptions;
 import uk.gov.hmcts.reform.fpl.enums.JudgeOrMagistrateTitle;
 import uk.gov.hmcts.reform.fpl.model.Address;
 import uk.gov.hmcts.reform.fpl.model.CaseData;
@@ -15,15 +14,18 @@ import uk.gov.hmcts.reform.fpl.model.PreviousHearingVenue;
 import uk.gov.hmcts.reform.fpl.model.common.Element;
 import uk.gov.hmcts.reform.fpl.model.common.JudgeAndLegalAdvisor;
 import uk.gov.hmcts.reform.fpl.model.common.dynamic.DynamicList;
-import uk.gov.hmcts.reform.fpl.model.common.dynamic.DynamicListElement;
 
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
 
-import static java.lang.Long.parseLong;
 import static org.assertj.core.api.Assertions.assertThat;
+import static uk.gov.hmcts.reform.fpl.enums.HearingOptions.EDIT_HEARING;
+import static uk.gov.hmcts.reform.fpl.enums.HearingOptions.NEW_HEARING;
 import static uk.gov.hmcts.reform.fpl.enums.HearingType.CASE_MANAGEMENT;
+import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.asDynamicList;
 import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.element;
 
 @ActiveProfiles("integration-test")
@@ -31,86 +33,88 @@ import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.element;
 @OverrideAutoConfiguration(enabled = true)
 class ManageHearingsControllerEditHearingMidEventTest extends AbstractControllerTest {
 
-    private static final String CASE_ID = "12345";
-
     ManageHearingsControllerEditHearingMidEventTest() {
         super("manage-hearings");
     }
 
     @Test
     void shouldPopulatePreviousVenueFieldsWhenUserSelectsAddNewHearing() {
-        List<Element<HearingBooking>> hearings = hearings();
+        Element<HearingBooking> pastHearing1 = element(hearing(now().minusDays(3), "96"));
+        Element<HearingBooking> pastHearing2 = element(hearing(now().minusDays(5), "298"));
+        Element<HearingBooking> futureHearing = element(hearing(now().plusDays(3), "162"));
 
-        CaseDetails caseDetails = CaseDetails.builder()
-            .id(parseLong(CASE_ID))
-            .data(Map.of("hearingOption", "NEW_HEARING",
-                "hearingDetails", hearings))
+        CaseData initialCaseData = CaseData.builder()
+            .hearingOption(NEW_HEARING)
+            .hearingDetails(List.of(pastHearing1, pastHearing2, futureHearing))
             .build();
 
-        AboutToStartOrSubmitCallbackResponse callbackResponse = postMidEvent(caseDetails, "edit-hearing");
-        CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
+        CaseData updatedCaseData = extractCaseData(postMidEvent(initialCaseData, "edit-hearing"));
 
-        assertThat(caseData.getPreviousHearingVenue()).isEqualTo(PreviousHearingVenue.builder()
+        assertThat(updatedCaseData.getPreviousHearingVenue()).isEqualTo(PreviousHearingVenue.builder()
             .previousVenue("Aberdeen Tribunal Hearing Centre, 48 Huntly Street, AB1, Aberdeen, AB10 1SH")
             .build());
     }
 
     @Test
-    void shouldBuildHearingDateListAndPopulateHearingCaseFieldsWhenUserSelectsEditHearing() {
-        List<Element<HearingBooking>> hearings = hearings();
-        DynamicListElement selectedHearing = DynamicListElement.builder()
-            .code(hearings.get(3).getId())
-            .label("Case management hearing, 15 March 2099")
+    void shouldBuildHearingDateListAndResetFirstHearingFlagWhenNonFirstHearingSelected() {
+        Element<HearingBooking> hearing1 = element(hearing(now().plusDays(2), "162"));
+        Element<HearingBooking> hearing2 = element(hearing(now().plusDays(3), "166").toBuilder()
+            .previousHearingVenue(PreviousHearingVenue.builder()
+                .previousVenue(hearing1.getValue().getVenue())
+                .build())
+            .build());
+
+        CaseData initialCaseData = CaseData.builder()
+            .hearingOption(EDIT_HEARING)
+            .hearingDateList(hearing2.getId())
+            .hearingDetails(List.of(hearing1, hearing2))
             .build();
 
-        DynamicList dynamicList = dynamicList(hearings, selectedHearing);
+        CaseData updatedCaseData = extractCaseData(postMidEvent(initialCaseData, "edit-hearing"));
 
-        CaseDetails caseDetails = CaseDetails.builder()
-            .id(parseLong(CASE_ID))
-            .data(Map.of("hearingOption", "EDIT_HEARING",
-                "hearingDateList", dynamicList,
-                "hearingDetails", hearings))
-            .build();
-
-        AboutToStartOrSubmitCallbackResponse callbackResponse = postMidEvent(caseDetails, "edit-hearing");
-        CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
-
-        assertThat(caseData.getHearingDateList()).isEqualTo(
-            mapper.convertValue(dynamicList, new TypeReference<Map<String, Object>>() {}));
-
-        assertThat(caseData.getFirstHearingFlag()).isEqualTo("Yes");
-        assertHearingCaseFields(caseData, hearings.get(3).getValue());
+        assertThat(updatedCaseData.getHearingDateList()).isEqualTo(dynamicList(hearing2.getId(), hearing1, hearing2));
+        assertThat(updatedCaseData.getFirstHearingFlag()).isNull();
+        assertHearingCaseFields(updatedCaseData, hearing2.getValue());
     }
 
     @Test
-    void shouldSetFirstHearingFlagWhenUserEditsFirstHearing() {
-        List<Element<HearingBooking>> hearings = hearings();
-        DynamicListElement selectedHearing = DynamicListElement.builder()
-            .code(hearings.get(0).getId())
-            .label("Case management hearing, 25 June 2099")
+    void shouldBuildHearingDateListAndSetFirstHearingFlagWhenFirstHearingSelected() {
+        Element<HearingBooking> hearing1 = element(hearing(now().plusDays(2), "162"));
+        Element<HearingBooking> hearing2 = element(hearing(now().plusDays(3), "166"));
+
+        CaseData initialCaseData = CaseData.builder()
+            .hearingOption(EDIT_HEARING)
+            .hearingDateList(hearing1.getId())
+            .hearingDetails(List.of(hearing1, hearing2))
             .build();
 
-        DynamicList dynamicList = dynamicList(hearings, selectedHearing);
+        CaseData updatedCaseData = extractCaseData(postMidEvent(initialCaseData, "edit-hearing"));
 
-        CaseDetails caseDetails = CaseDetails.builder()
-            .id(parseLong(CASE_ID))
-            .data(Map.of("hearingOption", "EDIT_HEARING",
-                "hearingDateList", dynamicList,
-                "hearingDetails", hearings))
-            .build();
-
-        AboutToStartOrSubmitCallbackResponse callbackResponse = postMidEvent(caseDetails, "edit-hearing");
-        CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
-
-        assertThat(caseData.getHearingDateList()).isEqualTo(
-            mapper.convertValue(dynamicList, new TypeReference<Map<String, Object>>() {}));
-
-        assertThat(caseData.getFirstHearingFlag()).isEqualTo("Yes");
-        assertHearingCaseFields(caseData, hearings.get(0).getValue());
-
+        assertThat(updatedCaseData.getHearingDateList()).isEqualTo(dynamicList(hearing1.getId(), hearing1, hearing2));
+        assertThat(updatedCaseData.getFirstHearingFlag()).isEqualTo("Yes");
+        assertHearingCaseFields(updatedCaseData, hearing1.getValue());
     }
 
-    private void assertHearingCaseFields(CaseData caseData, HearingBooking hearingBooking) {
+    @Test
+    void shouldBuildPastHearingDateListWhenHearingIsAdjourned() {
+        Element<HearingBooking> futureHearing1 = element(hearing(now().plusDays(2), "162"));
+        Element<HearingBooking> pastHearing1 = element(hearing(now().minusDays(2), "96"));
+        Element<HearingBooking> pastHearing2 = element(hearing(now().minusDays(3), "298"));
+        Element<HearingBooking> futureHearing2 = element(hearing(now().plusDays(3), "166"));
+
+        CaseData initialCaseData = CaseData.builder()
+            .hearingOption(HearingOptions.ADJOURN_HEARING)
+            .hearingDetails(List.of(futureHearing1, pastHearing1, pastHearing2, futureHearing2))
+            .pastAndTodayHearingDateList(pastHearing1.getId())
+            .build();
+
+        CaseData updatedCaseData = extractCaseData(postMidEvent(initialCaseData, "edit-hearing"));
+
+        assertThat(updatedCaseData.getPastAndTodayHearingDateList())
+            .isEqualTo(dynamicList(pastHearing1.getId(), pastHearing1, pastHearing2));
+    }
+
+    private static void assertHearingCaseFields(CaseData caseData, HearingBooking hearingBooking) {
         assertThat(caseData.getHearingType()).isEqualTo(hearingBooking.getType());
         assertThat(caseData.getHearingStartDate()).isEqualTo(hearingBooking.getStartDate());
         assertThat(caseData.getHearingEndDate()).isEqualTo(hearingBooking.getEndDate());
@@ -118,16 +122,7 @@ class ManageHearingsControllerEditHearingMidEventTest extends AbstractController
         assertThat(caseData.getPreviousHearingVenue()).isEqualTo(hearingBooking.getPreviousHearingVenue());
     }
 
-    private List<Element<HearingBooking>> hearings() {
-        return List.of(
-            element(hearing(LocalDateTime.of(2099, 6, 25, 20, 20), "162")),
-            element(hearing(LocalDateTime.of(2020, 2, 2, 20, 20), "96")),
-            element(hearing(LocalDateTime.of(2020, 1, 1, 10, 10), "298")),
-            element(hearing(LocalDateTime.of(2099, 3, 15, 20, 20), "166"))
-        );
-    }
-
-    private HearingBooking hearing(LocalDateTime startDate, String venue) {
+    private static HearingBooking hearing(LocalDateTime startDate, String venue) {
         return HearingBooking.builder()
             .type(CASE_MANAGEMENT)
             .startDate(startDate)
@@ -141,19 +136,10 @@ class ManageHearingsControllerEditHearingMidEventTest extends AbstractController
             .build();
     }
 
-    private DynamicList dynamicList(List<Element<HearingBooking>> hearings, DynamicListElement selected) {
-        return DynamicList.builder()
-            .value(selected)
-            .listItems(List.of(
-                DynamicListElement.builder()
-                    .code(hearings.get(0).getId())
-                    .label("Case management hearing, 25 June 2099")
-                    .build(),
-                DynamicListElement.builder()
-                    .code(hearings.get(3).getId())
-                    .label("Case management hearing, 15 March 2099")
-                    .build()
-            ))
-            .build();
+    @SafeVarargs
+    private Object dynamicList(UUID selectedId, Element<HearingBooking>... hearings) {
+        DynamicList dynamicList = asDynamicList(Arrays.asList(hearings), selectedId, HearingBooking::toLabel);
+        return mapper.convertValue(dynamicList, new TypeReference<Map<String, Object>>() {
+        });
     }
 }
